--- a/src/server_manager/ui_components/outline-server-progress-step.html
+++ b/src/server_manager/ui_components/outline-server-progress-step.html
@@ -19,6 +19,7 @@
 
 <link rel="import" href="./cloud-install-styles.html">
 <link rel="import" href="./outline-progress-spinner.html">
+<link rel="import" href="./outline-step-view.html">
 <link rel="import" href="./style.css">
 
 <dom-module id="outline-server-progress-step">
@@ -72,14 +73,18 @@
       }
     </style>
 
-    <paper-progress id='bar' class='transiting'></paper-progress>
-    <div class='card'>
-      <outline-progress-spinner></outline-progress-spinner>
-      <div class='servername'>
-        <h3>{{serverName}}</h3>
+    <outline-step-view>
+      <span slot="step-title">Setting up Outline.</span>
+      <span slot="step-description">This could take up to two minutes. You can<br/> destroy this server at anytime.</span>
+      <paper-progress id='bar' class='transiting'></paper-progress>
+      <div class='card'>
+        <outline-progress-spinner></outline-progress-spinner>
+        <div class='servername'>
+          <h3>{{serverName}}</h3>
+        </div>
+        <paper-button id='cancelButton' hidden$='{{!showCancelButton}}' on-tap='handleCancelTapped'>Cancel</paper-button>
       </div>
-      <paper-button id='cancelButton' hidden$='{{!showCancelButton}}' on-tap='handleCancelTapped'>Cancel</paper-button>
-    </div>
+    </outline-step-view>
 
   </template>
 
