--- a/src/server_manager/ui_components/cloud-install-styles.html
+++ b/src/server_manager/ui_components/cloud-install-styles.html
@@ -60,6 +60,7 @@ https://www.polymer-project.org/2.0/docs/devguide/style-shadow-dom#style-modules
       paper-progress {
         width: 100%;
         margin-top: 24px;
+        --paper-progress-active-color: #00bfa5;
       }
 
       hr {
