Revert "Clean up"
This reverts commit 24a7f6d0aa3adf6276312f688fb8f4d4cab24dab.

--- a/src/server_manager/ui_components/outline-tos-view.html
+++ b/src/server_manager/ui_components/outline-tos-view.html
@@ -53,7 +53,7 @@
     </div>
     <div id="tos">
         <span>I have read and understood the <a href="https://s3.amazonaws.com/outline-vpn/static_downloads/Outline-Terms-of-Service.html">Outline Terms of Service</a>.</span>
-      <paper-button on-tap="acceptTermsOfService">OK</paper-button>
+        <paper-button on-tap="acceptTermsOfService">OK</button>
     </div>
   </template>
   <script>
